# StockCalc

./: pyproject.toml
src/model/: user_portfolio.py
utils/: little_simulation.py
