[project]
name = "stockcalc"
version = "0.1.0"
description = ""
authors = [
    {name = "KitsuneSemCalda",email = "arthuramagalhaes1312@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "yfinance (>=0.2.65,<0.3.0)",
    "financedatabase (>=2.3.1,<3.0.0)",
    "plotly (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
